Fix z-index on navbar and avatar part

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 }
 
 body {
-  background-color: #f0f7fb;
   color: #0b0a0c;
   font-family: "Jost", sans-serif;
   line-height: 1.5;
@@ -34,6 +33,7 @@ li {
   background-color: transparent;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  z-index: 3;
 }
 
 .navbar--active {
@@ -100,6 +100,10 @@ li {
   background-color: #0b0a0c;
 }
 
+.hero {
+  background-color: #f0f7fb;
+}
+
 @media (min-width: 767px) {
   .hero {
     display: -webkit-box;
@@ -163,12 +167,14 @@ li {
 }
 
 .hero__img {
+  position: relative;
   display: block;
   width: 100%;
   border-radius: 50%;
   margin: 0 auto;
   -o-object-fit: cover;
      object-fit: cover;
+  z-index: 2;
 }
 
 .hero__circle {
@@ -178,7 +184,6 @@ li {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  z-index: -1;
 }
 
 .hero__circle--blue {
