--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,7 +7,6 @@
 }
 
 body {
-  background-color: $clr-light-blue;
   color: $clr-black;
   font-family: $font-primary;
   line-height: 1.5;
