--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,4 +1,6 @@
 .hero {
+  background-color: $clr-light-blue;
+
   @include respond-to('small') {
     display: flex;
     justify-content: center;
@@ -40,11 +42,13 @@
   }
 
   &__img {
+    position: relative;
     display: block;
     width: 100%;
     border-radius: 50%;
     margin: 0 auto;
     object-fit: cover;
+    z-index: 2;
   }
 
   &__circle {
@@ -54,7 +58,6 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    z-index: -1;
 
     &--blue {
       top: -18px;
